--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@
 ======================================== */
 * {
   margin: 0;
-  padding: 0px 0px 0px 4px;
+  padding: 0;
   box-sizing: border-box;
 }
 
