--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@
    GLOBAL RESET & BASE STYLES
 ======================================== */
 * {
-  margin: 0px 2px 0px 2px;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
