--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,16 @@ body {
     #0f172a   /* slate-950 again */
   );
 }
-
+.bg-gradient-custom2 {
+  background-image: linear-gradient(
+    143deg,
+    #7c6969,  /* purple-900 */
+    #5a5458,  /* slate-950 */
+    #636096,  /* gray-900 */
+    #c5eee0,  /* gray-800 */
+    #cfb8b8   /* slate-950 again */
+  );
+}
 
 /* ========================================
    SELECTION & FOCUS STYLES
