--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -488,13 +488,19 @@ body {
 }
 
 /* Improved container max widths */
-.container-responsive {
+.container-responsive1 {
   max-width: 100%;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
+.container-responsive2 {
+  max-width: 100%;
+  margin: 0 auto;
+  padding-left: 4.5rem;
+  padding-right: 4.5rem;
+}
 @media (min-width: 640px) {
   .container-responsive {
     padding-left: 2rem;
